--- a/client_code/Home/form_template.yaml
+++ b/client_code/Home/form_template.yaml
@@ -1,5 +1,5 @@
 container:
   type: HtmlTemplate
-  properties: {html: '@theme:landpage.html', visible: true}
+  properties: {html: '@theme:landpage.html'}
 components: []
 is_package: true
