--- a/client_code/Main/form_template.yaml
+++ b/client_code/Main/form_template.yaml
@@ -1,14 +1,7 @@
-is_package: true
-container:
-  type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html', foreground: '#000000'}
+container: {type: ColumnPanel}
 components:
-- type: ColumnPanel
+- name: content_panel
   properties: {}
-  name: body_panel
-  layout_properties: {slot: default}
-  components:
-  - name: content_panel
-    properties: {}
-    type: ColumnPanel
-    layout_properties: {grid_position: 'TTCYCS,QQHWFX', full_width_row: true}
+  type: ColumnPanel
+  layout_properties: {grid_position: 'LZSHHB,JMJVET', full_width_row: true}
+is_package: true
