Created standard-page.html and theme__!.css; Edited Main and Home

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -55,6 +55,7 @@ unique_ids:
     assets/vendor/animate.css/animate.css: '1702508675835866770403709.3136'
     assets/img/tech-stack/tech-stack-9.png: '1702506788901161659480963.0354'
     assets/vendor/bootstrap-icons/bootstrap-icons.json: '1702508132729850184148923.2424'
+    standard-page.html: '1703091924715248333997034.57504'
     assets/vendor/bootstrap/css/bootstrap-reboot.css.map: '1702510072841766664252636.6354'
     assets/vendor/boxicons/fonts/boxicons.woff2: '17025084627521460608330.850377'
     assets/vendor/boxicons/css/animations.css: '1702508614878192738110751.0584'
@@ -78,6 +79,7 @@ unique_ids:
     assets/vendor/glightbox/js/.gitkeep: '1702508764134801346975285.7305'
     assets/vendor/bootstrap/css/bootstrap-grid.min.css.map: '1702509966418250681673478.21445'
     assets/vendor/glightbox/js/glightbox.js: '1702508796788554280630961.5518'
+    theme__!.css: '1703091959157620853501093.5828'
     assets/vendor/bootstrap/.gitkeep: '1702507036124345526998464.5171'
     assets/vendor/bootstrap/css/bootstrap-grid.rtl.css: '1702509987181817616461928.8457'
     assets/vendor/bootstrap-icons/fonts/bootstrap-icons.woff2: '1702508096354812524110579.9921'
