--- a/anvil.yaml
+++ b/anvil.yaml
@@ -11,7 +11,8 @@ runtime_options: {version: 2, client_version: '3', server_version: python3-sandb
   server_spec: null}
 metadata: {logo_img: 'asset:assets/img/apple-touch-icon.png', title: ACAI Engineering}
 startup_form: null
-native_deps: {head_html: "<!-- Favicons -->\n<link href=\"_/theme/assets/img/favicon.ico\"\
+native_deps: {head_html: "<meta content=\"\" name=\"description\">\n<meta content=\"\
+    \" name=\"keywords\">\n\n<!-- Favicons -->\n<link href=\"_/theme/assets/img/favicon.ico\"\
     \ rel=\"icon\">\n<link href=\"_/theme/assets/img/apple-touch-icon.png\" rel=\"\
     apple-touch-icon\">\n\n<!-- Google Fonts -->\n<link href=\"https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i\"\
     \ rel=\"stylesheet\" rel=\"preload\" as=\"font\" crossorigin=\"anonymous\">\n\n\
